--- a/_config.yml
+++ b/_config.yml
@@ -9,40 +9,42 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Amsterdam
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
 title: Phishing with Tom # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Lets go out phishing together # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Phishing with Tom is a personal blog by Tom Rolvers, a security consultant from the Netherlands, dedicated to exploring and sharing insights on Microsoft Security products. The blog covers topics such as Microsoft Defender, Sentinel, Microsoft 365, and more, aiming to document and share experiences with readers.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://azurewithtom.com/phishingwithtom"
 
 github:
-  username: github_username # change to your GitHub username
+  username: awt-tom # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: Azurewithtom # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Tom Rolvers
+  email: info@azurewithtom.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    #- https://twitter.com/username # change to your Twitter homepage
+    #- https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/tomrolvers
+    - https://github.com/awt-tom
+    - https://bsky.app/profile/azurewithtom.bsky.social
 
 # Site Verification Settings
 webmaster_verifications:
